tests/bad/example-e04.rat
fn Fun () -> Void {
  return;
}

fn Main () -> Void {
  Fun(0);
  return;
}
